Fix text alignment in Select

--- a/src/components/form/Select/Select.module.scss
+++ b/src/components/form/Select/Select.module.scss
@@ -82,6 +82,7 @@
 
     > span {
       width: inherit;
+      text-align: left;
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
